--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
+server.port=8080
+
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/dataset
+spring.datasource.url=jdbc:postgresql://172.17.0.1:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=mysecretpassword
 
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 
-spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
 
