--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://172.17.0.1:5432/postgres
+spring.datasource.url=jdbc:postgresql://172.17.0.1:5432/datasets
 spring.datasource.username=postgres
-spring.datasource.password=mysecretpassword
+spring.datasource.password=root
 
 
 spring.datasource.initialization-mode=always
