--- a/application.yaml
+++ b/application.yaml
@@ -1,12 +1,12 @@
-#spring:
-#  datasource:
-#    driver-class-name: org.postgresql.Driver
-#    url: jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB}
-#    username: {POSTGRES_USER}
-#    password: {POSTGRES_PASSWORD}
-#jpa:
-#  database-platform: org.hibernate.dialect.PostgresPlusDialect
-#  generate-ddl: true
-#  show-sql: true
-#  hibernate:
-#    ddl-auto: update
+spring:
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5432/dataset
+    username: postgres
+    password: root
+jpa:
+  database-platform: org.hibernate.dialect.PostgresPlusDialect
+  generate-ddl: true
+  show-sql: true
+  hibernate:
+    ddl-auto: update
