--- a/pom.xml
+++ b/pom.xml
@@ -59,16 +59,19 @@
 			<artifactId>hibernate-types-52</artifactId>
 			<version>2.20.0</version>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/com.networknt/json-schema-validator -->
 		<dependency>
-			<groupId>com.github.java-json-tools</groupId>
-			<artifactId>json-schema-core</artifactId>
-			<version>1.2.10</version>
+			<groupId>com.networknt</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>1.0.86</version>
 		</dependency>
 
 		<dependency>
-			<groupId>com.github.java-json-tools</groupId>
+			<groupId>com.github.fge</groupId>
 			<artifactId>json-schema-validator</artifactId>
-			<version>2.2.10</version>
+			<version>2.2.6</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
@@ -81,6 +84,11 @@
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
 			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.15.2</version>
 		</dependency>
 
 	</dependencies>
