--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=8080
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
+#spring.datasource.url="jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB}"
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DB}
 spring.datasource.username=${POSTGRES_USER}
 spring.datasource.password=${POSTGRES_PASSWORD}
@@ -10,5 +11,3 @@ spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
-
-
